swagger, cert and search changes
